samples/_failures_safe/1761604476_a1683f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d1eb8fa.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_0d1eb8fa.c:149:13: error: expected declaration or statement at end of input
  149 |             token.value[1] = '\0';
      |             ^~~~~
./samples/SAFE/__tmp_0d1eb8fa.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d1eb8fa.c:149:13: error: expected declaration or statement at end of input
